# http-server-rust

./: Cargo.toml  READ ME.txt
src/: main.rs
static/: index.html
